docs: DELETE /opening
